Name:                monad-coro
Version:             0.9
Cabal-Version:       >= 1.16
Build-Type:          Simple
Synopsis:            Coroutine monad transformer for suspending and resuming monadic computations
Category:            Concurrency, Control, Monads
Tested-with:         GHC
Description:         This package defines a monad transformer, applicable to any monad, that allows the
                     monadic computation to suspend and to be later resumed. The transformer is parameterized
                     by an arbitrary functor, used to store the suspended computation's resumption.

License:             GPL
License-file:        LICENSE.txt
Copyright:           (c) 2010-2012 Mario Blazevic
Author:              Mario Blazevic, Anupam Jain
Maintainer:          ajnsit@gmail.com
Homepage:            http://github.com/ajnsit/monad-coro/

Source-repository head
  type:              git
  location:          http://github.com/ajnsit/monad-coro/

Library
  hs-source-dirs:    src
  Exposed-Modules:   Control.Monad.Coroutine,
                     Control.Monad.Coroutine.SuspensionFunctors,
                     Control.Monad.Coroutine.Nested,
                     Control.Monad.Coroutine.Generator
  Build-Depends:     base >= 4.6 && < 5,
                     transformers
  GHC-prof-options:  -auto-all
  default-language:  Haskell2010

