Name:                monad-coro
Version:             0.1
Cabal-Version:       >= 1.16
Build-Type:          Simple
Synopsis:            A generator for monadic values
Category:            Concurrency, Control, Monads
Description:         This package provides a generator for monadic values

License:             MIT
License-file:        LICENSE.txt
Copyright:           (c) 2014-2015 Anupam Jain
Author:              Anupam Jain
Maintainer:          ajnsit@gmail.com
Homepage:            http://github.com/ajnsit/monad-coro/

Source-repository head
  type:              git
  location:          http://github.com/ajnsit/monad-coro/

Library
  hs-source-dirs:    src
  Exposed-Modules:   Control.Monad.Generator
  Build-Depends:     base >= 4.6 && < 5
  default-language:  Haskell2010

